# api/openapi-develop.yaml
@@ -112,7 +112,8 @@ paths:
           description: Internal server error
       security:
       - CognitoAuthorizer: []
-      tags: []
+      tags:
+      - inquiries
     post:
       operationId: post_inquiry
       requestBody:
@@ -142,6 +143,7 @@ paths:
           description: Internal server error
       security:
       - CognitoAuthorizer: []
-      tags: []
+      tags:
+      - inquiries
 servers:
 - url: https://v3bc42brtj.execute-api.ap-northeast-3.amazonaws.com
